# Keyboarder

./: .gitignore  pyproject.toml
resource/data/: parameters.json
resource/files/arpeggiator/: Buggy  Muse  Ramm4  coll  cool
resource/files/drums/: Increadible Hi-Hat  cool drums
resource/files/parameters/: Buggy  Ramm4  distorted organ  organ  para
resource/symbols/Drum_icons/: Drum_Icons.afdesign
resource/symbols/decrease/: decrease.afdesign
resource/symbols/increase/: Increase.afdesign
src/: KeyboardVisualizer.py  app.py  bla.py  main.py  midi.py  parameters.py  selectinput.py
src/panels/: arpeggiator.py  asdr_controls.py  drums.py  information_panel.py  keyboard.py  overtone_controls.py  selector.py
src/sound/: SoundFile.py  SoundTest.py  arpeggio.py  sound.py  synth.py
src/widgets/: imagebutton.py  key.py  round_slider.py  slider.py
