[tool.poetry]
name = "keyboarder"
version = "0.1.0"
description = ""
authors = ["Laurin <116090154+Laurin-das-A@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11|~3.12"
numpy = "*"
customtkinter = "*"
pyaudio = "*"
numba = "*"
pillow = "*"
python-rtmidi = "^1.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
